# HSR

./: README.md
bitwise/: bt.cpp  bt.h  core.h  enc.cpp  enc.h  eval.cpp  eval.h  main.cpp  makefile  par_circuit.cpp  par_circuit.h  seq_circuit.cpp  seq_circuit.h
wordwise/: CMakeLists.txt  core.h  enc.cpp  enc.h  eval.cpp  eval.h  main.cpp  wd.cpp  wd.h
